--- a/webapp/main_v2.html
+++ b/webapp/main_v2.html
@@ -172,7 +172,7 @@
                                                   <div class="fee-td "><div>
                                                     {% set receivable_first = eachRate["receivable"]["first"] | float %}
                                                     {% set real_receivable_first = receivable_first*0.94 %}
-                                                    {{ real_receivable_first | round(0,"floor") }}%
+                                                    {{ real_receivable_first | round(0,"floor") | int }}%
                                                   </div></div>
                                                   {% if "activeValue" in eachRate["letout"].keys() %}
                                                     <div class="fee-td "><div>
@@ -190,7 +190,7 @@
                                                   <div class="fee-td "><div>
                                                     {% set receivable_first = eachRate["receivable"]["first"] | float %}
                                                     {% set real_receivable_first = receivable_first*0.94 %}
-                                                    {{ real_receivable_first | round(0,"floor") }}%
+                                                    {{ real_receivable_first | round(0,"floor") | int }}%
                                                   </div></div>
                                                   {% if "activeValue" in eachRate["letout"].keys() %}
                                                     <div class="fee-td "><div>
@@ -329,7 +329,7 @@
                         <td>{{ details_dict["insureDesc"] }}</td>
                         {% set firstRate_v2 =  details_dict["firstRate"] | float %}
                         {% set real_rate = firstRate_v2 * 0.94 %}
-                        <td>{{ real_rate | round(0,"floor")}}%</td>
+                        <td>{{ real_rate | round(0,"floor") | int}}%</td>
                         {# <td>{{ details_dict["secondRate"] }}</td> #}
                     </tr>
                   {% endfor %}
@@ -385,7 +385,7 @@
                               {% if feeRate %}
                                 {% set feeRate_float = feeRate | float %}
                                 {% set real_feeRate = feeRate_float*0.94 %}
-                                <td>{{ real_feeRate | round(0,"floor") }}%</td>
+                                <td>{{ real_feeRate | round(0,"floor") | int }}%</td>
                               {% else %}
                               <td> - </td>
                               {% endif %}
@@ -488,14 +488,14 @@
                                                           {% set real_rate_2 = firstrate_list[1] | float %}
                                                           {% set real_first_rate = real_rate_1*0.94 %}
                                                           {% set real_zhekou = real_rate_2*0.94 %}
-                                                          <div class="fee-td "><div>{{ real_first_rate | round(0,"floor")}}%+{{real_zhekou | round(0,"floor")}}%</div></div>
+                                                          <div class="fee-td "><div>{{ real_first_rate | round(0,"floor") | int}}%+{{real_zhekou | round(0,"floor") | int}}%</div></div>
                                                         {% else %}
                                                           {% if "一" == firstrate %}
                                                             <div class="fee-td "><div>{{ item }}</div></div>
                                                           {% else %}
                                                             {% set firstrate_1 = firstrate | float %}
                                                             {% set real_firstrate = firstrate_1*0.94 %}
-                                                            <div class="fee-td "><div>{{ real_firstrate | round(0,"floor") }}%</div></div>
+                                                            <div class="fee-td "><div>{{ real_firstrate | round(0,"floor") | int }}%</div></div>
                                                           {% endif %}
                                                         {% endif %}
                                                         
